# cjm-fasthtml-workflow-transcript-decomp

./: .gitignore  README.md  demo_app.py  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_fasthtml_workflow_transcript_decomp/: _modidx.py
cjm_fasthtml_workflow_transcript_decomp/alignment/: html_ids.py  models.py  utils.py
cjm_fasthtml_workflow_transcript_decomp/combined/: handlers.py  helpers.py  html_ids.py  keyboard_config.py  step_combined.py
cjm_fasthtml_workflow_transcript_decomp/components/: keyboard_config.py  step_combined.py  steps.py
cjm_fasthtml_workflow_transcript_decomp/core/: config.py  html_ids.py  models.py  state_store.py
cjm_fasthtml_workflow_transcript_decomp/decomposition/: html_ids.py  models.py  utils.py
cjm_fasthtml_workflow_transcript_decomp/review/: html_ids.py  models.py
cjm_fasthtml_workflow_transcript_decomp/routes/: core.py  init.py  models.py
cjm_fasthtml_workflow_transcript_decomp/selection/: html_ids.py  models.py  utils.py
cjm_fasthtml_workflow_transcript_decomp/services/: alignment.py  audio_conversion.py  formatting.py  graph.py  history.py  segmentation.py  source.py  source_utils.py  text_utils.py
cjm_fasthtml_workflow_transcript_decomp/workflow/: session_integration.py  workflow.py
core/: config.html  config.html.md
nbs/: index.ipynb  nbdev.yml
nbs/alignment/: html_ids.ipynb  models.ipynb  utils.ipynb
nbs/combined/: handlers.ipynb  helpers.ipynb  html_ids.ipynb  keyboard_config.ipynb  step_combined.ipynb
nbs/components/: keyboard_config.ipynb  step_combined.ipynb  steps.ipynb
nbs/core/: config.ipynb  html_ids.ipynb  models.ipynb  state_store.ipynb
nbs/decomposition/: html_ids.ipynb  models.ipynb  utils.ipynb
nbs/review/: html_ids.ipynb  models.ipynb
nbs/routes/: core.ipynb  init.ipynb  models.ipynb
nbs/selection/: html_ids.ipynb  models.ipynb  utils.ipynb
routes/: init.html  init.html.md
tests_manual/: test_graph_service.py  web_audio_api_load_test.html  web_audio_api_parallel_test.html
workflow/: session_integration.html  session_integration.html.md  workflow.html  workflow.html.md
(+173 files in other folders)
