[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-workflow-transcript-decomp"
dynamic = ["version"]
description = "A FastHTML-based human-in-the-loop workflow for decomposing raw transcripts into traversable context graph spines with precise text segmentation and audio alignment."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system', 'cjm-graph-plugin-system', 'cjm-media-plugin-system', 'cjm-text-plugin-system', 'cjm-transcription-plugin-system', 'cjm-graph-domains', 'python-fasthtml', 'cjm-fasthtml-app-core', 'cjm-fasthtml-daisyui', 'cjm-fasthtml-interactions', 'cjm-fasthtml-settings', 'cjm_fasthtml_lucide_icons', 'cjm_fasthtml_file_browser', 'cjm_fasthtml_keyboard_navigation', 'cjm_fasthtml_token_selector', 'duckdb', 'pandas', 'cjm_fasthtml_card_stack', 'cjm_workflow_state', 'cjm_source_provider', 'cjm_transcript_source_select', 'cjm_transcript_segment_align>=0.0.19', 'cjm_transcript_review>=0.0.19', 'cjm_transcript_verify', 'cjm_fasthtml_step_progress', 'cjm-fasthtml-workflow-session-management', 'cjm_fasthtml_web_audio>=0.0.11']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-workflow-transcript-decomp"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-workflow-transcript-decomp"

[project.entry-points.nbdev]
cjm_fasthtml_workflow_transcript_decomp = "cjm_fasthtml_workflow_transcript_decomp._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_workflow_transcript_decomp.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_workflow_transcript_decomp"]

[tool.nbdev]
